2005-04-30  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/host_macros.m4: use sw_vers on Apple machines to find
	out more appropriate OS name (macosx) and OS version (10.3.x) than
	uname(3) reports.

2005-04-29  Erez Zadok  <ezk@cs.sunysb.edu>

	* config.guess, config.sub, doc/texinfo.tex: updates from latest
	official GNU distributions.

	* m4/macros/host_macros.m4: for macosx, change architecture value
	from "Power Macintosh" to "powerpc".

	* libamu/util.c (xstrlcpy): format 'len' parameter as u_long, not
	int (it's a size_t).

2005-04-16  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/amd.conf.5, doc/am-utils.texi (normalize_slashes
	Parameter), scripts/amd.conf-sample: document new
	normalize_slashes global configuration parameter.

	* amd/opts.c (deslashify, normalize_slash): don't touch trailing
	slashes, even if multiples of them, if user said
	normalize_slashes=no in amd.conf.

	* amd/conf.c (gopt_normalize_slashes): new function to record if
	to normalize slashes or not.

	* amd/amd.h (CFM_NORMALIZE_SLASHES): new flag to decide if to
	normalize double-slashes or not ("yes" by default).

	* amd/autil.c (am_mounted): pass TRUE when calling mf_mounted.
	This is the parent mntfs which does the mf->mf_fo
	(am_opts type), and we're passing TRUE here to tell mf_mounted to
	actually free the am_opts.

	* amd/autil.c (mf_mounted): Be careful when calling free_ops and
	XFREE here.  Some pseudo file systems like nfsx call this
	function, even though it would be called by the lower-level amd
	file system functions.  nfsx needs to call this function because
	of the other actions it takes.  So we pass a boolean from the
	caller (yes, not so clean workaround) to determine if we should
	free or not.  If we're not freeing (often because we're called
	from a callback function), then just to be sure, we'll zero out
	the am_opts structure and set the pointer to NULL.  The parent
	mntfs node owns this memory and is going to free it with a call to
	mf_mounted(mntfs,TRUE).
